--- a/src/main/resources/templates/employee.html
+++ b/src/main/resources/templates/employee.html
@@ -11,7 +11,7 @@
     <script th:src="@{/js/dropdown.js}"></script>
     <h1 th:if="${employee.getActionMode().toString().equals('UPDATE')}">Информация о служащем</h1>
     <h1 th:if="${employee.getActionMode().toString().equals('CREATE')}">Добавить служащего</h1>
-    <form action="#" th:action="@{/employees/employee}" method="post">
+    <form action="#" th:action="${'/employees/employee?id=' + employee.getId()}" method="post">
         <input style="display: none;" name="mode" type="text" th:value="${employee.getActionMode().toString()}">
         <input th:if="${employee.getActionMode().toString().equals('UPDATE')}" style="display: none;" name="id"
                type="text" th:value="${employee.getId()}">
@@ -62,8 +62,15 @@
             </div>
         </div>
 
-        <input class="button1" type="submit" value="Сохранить"/>
-    </form>
+        <input class="button1" type="submit" value="Сохранить"
+               onclick="return confirm('Сохранить изменения?')"/>
+    <form action="#" th:action="@{/employees/employee}" method="post"
+          th:if="${employee.getActionMode().toString().equals('UPDATE')}">
+        <input style="display: none;" name="mode" type="text" value="DELETE">
+        <input style="display: none;" name="id" type="text" th:value="${employee.getId()}">
+        <input class="button1 danger" type="submit" value="Удалить служащего"
+               onclick="return confirm('Удалить служащего и историю занимаемых должностей?')"/>
+    <form>
     <script th:src="@{/js/inputs.js}"></script>
 </main>
 
