--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 <main class="site-content">
     <h1>Добро пожаловать.</h1>
     <div>
-        <a class="button1" th:href="@{/employees}">Список сотрудников</a>
+        <a class="button1" th:href="@{/employees}">Список служащих</a>
     </div>
 
     <div>
