--- a/src/main/resources/templates/departments.html
+++ b/src/main/resources/templates/departments.html
@@ -41,7 +41,7 @@
             </form>
         </div>
         <div style="display: flex;">
-            <a style="align-self: flex-end;" class="button1" th:href="@{/employees/employee}">Добавить подразделение</a>
+            <a style="align-self: flex-end;" class="button1" th:href="@{/departments/department}">Добавить подразделение</a>
         </div>
     </div>
 
